refactor: deleted navigation code

--- a/Music.UWP/Music.UWP.csproj
+++ b/Music.UWP/Music.UWP.csproj
@@ -211,9 +211,7 @@
       <Name>Music.Model</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Base\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
