--- a/Music.Web/ClientApp/angular.json
+++ b/Music.Web/ClientApp/angular.json
@@ -50,7 +50,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Music.Web:build"
+            "browserTarget": "Music.Web:build",
+			"proxyConfig": "src/proxy.conf.json"			
           },
           "configurations": {
             "production": {
