--- a/Music.Web/ClientApp/package.json
+++ b/Music.Web/ClientApp/package.json
@@ -21,41 +21,37 @@
     "@angular/platform-browser-dynamic": "12.2.2",
     "@angular/platform-server": "12.2.2",
     "@angular/router": "12.2.2",
-    "@nguniversal/module-map-ngfactory-loader": "8.2.6",
-    "core-js": "^3.8.3",
-    "node-sass": "^5.0.0",
-    "oidc-client": "^1.11.3",
+    "core-js": "^3.20.1",
+    "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
-    "protractor": "~7.0.0",
-    "rxjs": "^6.6.3",
+    "rxjs": "^6.6.7",
     "ts-node": "~8.4.1",
     "tslib": "^2.0.0",
-    "tslint": "~6.1.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.2",
-    "@angular/cli": "^12.2.2",
-    "@angular/compiler-cli": "^12.2.2",
-    "@angular/language-service": "^12.2.2",
+    "@angular-devkit/build-angular": "^13.1.2",
+    "@angular/cli": "^12.2.14",
+    "@angular/compiler-cli": "^12.2.15",
+    "@angular/language-service": "^12.2.15",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^12.11.1",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^12.20.39",
     "codelyzer": "^6.0.0",
     "ini": "^1.3.7",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
+    "karma": "^6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "typescript": "4.3.5"
   },
   "optionalDependencies": {
-    "node-sass": "^5.0.0",
-    "protractor": "~5.4.2",
+    "node-sass": "^7.0.1",
+    "protractor": "^5.4.4",
     "ts-node": "~8.4.1",
-    "tslint": "~5.20.0"
+    "tslint": "^5.20.1"
   }
 }
