--- a/Music.Web/ClientApp/angular.json
+++ b/Music.Web/ClientApp/angular.json
@@ -32,7 +32,8 @@
             "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
-            "namedChunks": true
+            "namedChunks": true,
+            "aot": true
           },
           "configurations": {
             "production": {
