--- a/Music.Web/ClientApp/tsconfig.json
+++ b/Music.Web/ClientApp/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
-    "target": "es2020",
+    "target": "ES2022",
     "strict": true,
     "typeRoots": [
       "node_modules/@types"
@@ -17,6 +17,7 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "useDefineForClassFields": false
   }
 }
